# int-interval-stack

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: benchmark-pages.yml  codspeed.yml  gate.yml  release.yml
benches/: construct.rs  construct_parallel.rs  contains_interval.rs  contains_point.rs  height_at.rs  intersects_interval.rs  iter_height_segments.rs  iter_height_segments_at_least.rs  iter_height_segments_at_most.rs  iter_height_segments_between.rs  iter_height_segments_exactly.rs  iter_intervals.rs  iter_intervals_at_least.rs  iter_intervals_at_most.rs  iter_intervals_between.rs  iter_intervals_exactly.rs  iter_peak_height_segments.rs  iter_windows.rs  max_height.rs  par_iter_windows.rs  peak_intervals.rs  window_dense_baseline.rs  window_height_runs.rs  window_iter_bounds.rs  window_iter_height_runs.rs  window_par_iter_height_runs.rs
benches/datasets/: mod.rs
benches/support/: mod.rs
benches/window_support/: mod.rs
proptest-regressions/int_co_stack/impls_for_access/: tests_for_access.txt
proptest-regressions/int_co_stack/impls_for_construction/: tests_for_from_iter_and_from_par_iter.txt  tests_for_stack_build_acc.txt
proptest-regressions/int_co_stack/impls_for_iter/: tests_for_iter.txt
proptest-regressions/int_co_stack/impls_for_predicates/: tests_for_predicates.txt
src/: change_point.rs  height_segment.rs  height_stats.rs  int_co_stack.rs  lib.rs  stack_height_stats.rs  stack_window.rs
src/change_point/: test_support.rs
src/int_co_stack/: impls_for_access.rs  impls_for_construction.rs  impls_for_iter.rs  impls_for_predicates.rs  impls_for_windows.rs  test_support.rs
src/int_co_stack/impls_for_access/: tests_for_access.rs  tests_for_covered_from_change_points.rs
src/int_co_stack/impls_for_construction/: test_support.rs  tests_for_build_parts_from_endpoints.rs  tests_for_build_points_from_endpoints.rs  tests_for_covered_from_change_points.rs  tests_for_from_iter_and_from_par_iter.rs  tests_for_merge_parts.rs  tests_for_merge_points.rs  tests_for_stack_build_acc.rs
src/int_co_stack/impls_for_derived_traits/: tests_for_clone_and_eq.rs
src/int_co_stack/impls_for_iter/: tests_for_iter.rs  tests_for_iter_height_segments.rs  tests_for_iter_height_segments_at_least.rs  tests_for_iter_height_segments_at_most.rs  (+3 more)
src/stack_height_stats/: test_support.rs
src/stack_window/: tests_for_cursor.rs  tests_for_height_run_at.rs  tests_for_iter_height_runs.rs  tests_for_new.rs  tests_for_window_iter.rs
(+6 files in other folders)
