[package]
name = "int-interval-stack"
version = "0.1.0"
edition = "2024"
description = "Integer half-open interval stack structures for overlap multiplicity."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/int-interval-stack"
readme = "README.md"

keywords = ["interval", "stack", "range", "integer", "algorithms"]
categories = ["data-structures", "algorithms"]

[dependencies]
int-interval = "0.9.2"
rayon = "1.12.0"

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat", features = [
    "html_reports",
    "csv_output",
] }
proptest = "1.11.0"

[lib]
doctest = false
bench = false

[[bench]]
name = "construct"
harness = false

[[bench]]
name = "construct_parallel"
harness = false

[[bench]]
name = "height_at"
harness = false

[[bench]]
name = "max_height"
harness = false

[[bench]]
name = "contains_point"
harness = false

[[bench]]
name = "intersects_interval"
harness = false

[[bench]]
name = "contains_interval"
harness = false

[[bench]]
name = "iter_intervals"
harness = false

[[bench]]
name = "iter_intervals_at_least"
harness = false

[[bench]]
name = "iter_intervals_at_most"
harness = false

[[bench]]
name = "iter_intervals_exactly"
harness = false

[[bench]]
name = "iter_intervals_between"
harness = false

[[bench]]
name = "peak_intervals"
harness = false
