[package]
name = "int-interval-stack"
version = "0.3.0"
edition = "2024"
description = "Integer half-open interval stack structures for overlap multiplicity."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/int-interval-stack"
readme = "README.md"

keywords = ["interval", "stack", "range", "integer", "algorithms"]
categories = ["data-structures", "algorithms"]

[dependencies]
either = "1.16.0"
int-interval = "0.9.6"
int-interval-set = "0.3.4"
rayon = "1.12.0"

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat", features = [
    "html_reports",
    "csv_output",
] }
proptest = "1.11.0"

[lib]
doctest = false
bench = false

[[bench]]
name = "construct"
harness = false

[[bench]]
name = "construct_parallel"
harness = false

[[bench]]
name = "height_at"
harness = false

[[bench]]
name = "iter_height_segments"
harness = false

[[bench]]
name = "iter_windows"
harness = false

[[bench]]
name = "window_iter_height_runs"
harness = false

[[bench]]
name = "window_dense_baseline"
harness = false
